# pycreate2

./: .gitignore  LICENSE  pyproject.toml  readme.md
examples/: displayExample.py  playSong.py  runExample.py  runQuery.py  sensorExample.py
pycreate2/: OI.py  create2api.py  packets.py
src/pycreate2/: OI.py  __init__.py  create2api.py  createSerial.py  logger.py  packets.py  sensors.py
src/pycreate2/scripts/: create_monitor.py  create_reset.py  create_shutdown.py
tests/: common.py  test_pycreate.py  test_sensors.py  test_serial.py
